fix img overlap in safari

--- a/src/styles/features/preview-environment/article-every-branch.scss
+++ b/src/styles/features/preview-environment/article-every-branch.scss
@@ -83,6 +83,7 @@
 
   .li {
     font-size: 16px;
+    position: relative;
     z-index: 1;
 
     + .li {
